[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/icons/up_arrow_2.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/down_arrow_1.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/down_arrow_0.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/up_arrow_0.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/up_arrow_1.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/down_arrow_2.png" type="Texture" id=6]
[ext_resource path="res://src/menu/common/ScrollableContainer.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Theme" id=8]
VScrollBar/styles/grabber = SubResource( 5 )
VScrollBar/styles/grabber_highlight = SubResource( 6 )
VScrollBar/styles/grabber_pressed = SubResource( 7 )
VScrollBar/styles/scroll = SubResource( 3 )
VScrollBar/styles/scroll_focus = SubResource( 4 )

[sub_resource type="AnimatedTexture" id=9]
flags = 4
frames = 3
frame_0/texture = ExtResource( 4 )
frame_1/texture = ExtResource( 5 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 1 )
frame_2/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=10]
flags = 4
frames = 3
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 2 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 6 )
frame_2/delay_sec = 0.0

[node name="ScrollableContainerControl" type="Control"]
anchor_right = 0.94
anchor_bottom = 0.65
rect_pivot_offset = Vector2( -862, -63 )
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.04
anchor_top = 0.03
anchor_right = 0.96
anchor_bottom = 0.97
color = Color( 0.14902, 0.14902, 0.156863, 0.686275 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_top = 0.03
anchor_right = 1.0
anchor_bottom = 0.97
theme = SubResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="UpperLimitControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.03

[node name="ColorRect" type="ColorRect" parent="UpperLimitControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.156863, 1 )

[node name="ScrollUpTextureButton" type="TextureButton" parent="UpperLimitControl"]
anchor_left = 0.4
anchor_top = -0.7
anchor_right = 0.6
anchor_bottom = 1.7
texture_normal = SubResource( 9 )
expand = true
stretch_mode = 5

[node name="LowerLimitControl" type="Control" parent="."]
anchor_top = 0.97
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="LowerLimitControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.156863, 1 )

[node name="ScrollDownTextureButton" type="TextureButton" parent="LowerLimitControl"]
anchor_left = 0.4
anchor_top = -0.7
anchor_right = 0.6
anchor_bottom = 1.7
texture_normal = SubResource( 10 )
expand = true
stretch_mode = 5

[connection signal="gui_input" from="ScrollContainer" to="." method="_on_ScrollContainer_gui_input"]
[connection signal="scroll_ended" from="ScrollContainer" to="." method="_on_ScrollContainer_scroll_ended"]
[connection signal="scroll_started" from="ScrollContainer" to="." method="_on_ScrollContainer_scroll_started"]
